# FuserCustomSongCreator

./: .gitattributes  CMakeLists.txt  README.md
moggcrypt/: CCallbacks.cpp  CCallbacks.h  MakeMogg.cpp  OggMap.cpp  OggMap.h  VorbisEncrypter.cpp  VorbisEncrypter.h  XiphTypes.h  aes.h  keys.h  oggvorbis.cpp  oggvorbis.h
src/: crc.h  custom_song_creator.cpp  custom_song_pak_template.h  fuser_asset.cpp  fuser_asset.h  hmx_midifile.cpp  hmx_midifile.h  main.cpp  serialize.h  uasset.cpp  uasset.h
